Added TableView, Custom Cell, and Ask Question UI
Added custom Question Cell
Added custom Question View Controller

--- a/QandA/QandA/Base.lproj/Main.storyboard
+++ b/QandA/QandA/Base.lproj/Main.storyboard
@@ -1,24 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5i6-XL-Mhg">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Q&A-->
+        <scene sceneID="1Vo-gR-UwW">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="ya8-SK-CFb" customClass="QuestionTableViewController" customModule="QandA" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p6T-Vu-n0S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuestionCell" rowHeight="115" id="FNR-ze-ADJ" customClass="QuestionTableViewCell" customModule="QandA" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="115"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FNR-ze-ADJ" id="cC0-Eu-YsA">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="114.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-Yr-9KG">
+                                            <rect key="frame" x="24" y="19" width="327" height="77"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="NVt-d7-hV2">
+                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="20.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtV-bz-2rp">
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XLI-9G-qvd">
+                                                            <rect key="frame" x="88" y="0.0" width="42" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="XLI-9G-qvd" firstAttribute="leading" secondItem="gtV-bz-2rp" secondAttribute="trailing" constant="12" id="bNG-jx-OvI"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="1j1-DY-pEe">
+                                                    <rect key="frame" x="0.0" y="28.5" width="130" height="20.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asked By:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sgx-as-yUA">
+                                                            <rect key="frame" x="0.0" y="0.0" width="78" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8m-92-Vpy">
+                                                            <rect key="frame" x="88" y="0.0" width="42" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="c8m-92-Vpy" firstAttribute="leading" secondItem="sgx-as-yUA" secondAttribute="trailing" constant="10" id="TJC-HP-fTC"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yg-LC-7Uf">
+                                                    <rect key="frame" x="0.0" y="57" width="43" height="20"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3Yg-LC-7Uf" firstAttribute="top" secondItem="1j1-DY-pEe" secondAttribute="bottom" constant="8" id="NTA-sX-XFA"/>
+                                                <constraint firstItem="NVt-d7-hV2" firstAttribute="top" secondItem="YHj-Yr-9KG" secondAttribute="top" id="YSI-xb-jfI"/>
+                                                <constraint firstAttribute="bottom" secondItem="3Yg-LC-7Uf" secondAttribute="bottom" id="owe-FC-Rtd"/>
+                                                <constraint firstItem="1j1-DY-pEe" firstAttribute="top" secondItem="NVt-d7-hV2" secondAttribute="bottom" constant="8" id="sMX-JL-xVb"/>
+                                            </constraints>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="YHj-Yr-9KG" firstAttribute="top" secondItem="cC0-Eu-YsA" secondAttribute="topMargin" constant="8" id="5xH-qa-6uI"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="YHj-Yr-9KG" secondAttribute="bottom" constant="8" id="AXt-ez-3BU"/>
+                                        <constraint firstItem="YHj-Yr-9KG" firstAttribute="leading" secondItem="cC0-Eu-YsA" secondAttribute="leadingMargin" constant="8" id="WiG-Se-v0g"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="YHj-Yr-9KG" secondAttribute="trailing" constant="8" id="h8Q-TU-FpJ"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="answerLabel" destination="3Yg-LC-7Uf" id="4bw-qG-UAh"/>
+                                    <outlet property="askerLabel" destination="c8m-92-Vpy" id="RBL-pN-U69"/>
+                                    <outlet property="questionLabel" destination="XLI-9G-qvd" id="OkM-Ja-UAf"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ya8-SK-CFb" id="MhW-MC-LoN"/>
+                            <outlet property="delegate" destination="ya8-SK-CFb" id="TCj-An-Uvw"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Q&amp;A" id="Vuv-R4-7CB">
+                        <barButtonItem key="rightBarButtonItem" title="Ask Question" id="ngQ-Ia-Hud">
+                            <connections>
+                                <action selector="askQuestionButtonPressed:" destination="ya8-SK-CFb" id="jKa-kJ-sNd"/>
+                                <segue destination="qup-TW-QQO" kind="show" identifier="AskQuestion" id="FjN-rv-Xin"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BPq-3b-cEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="692.75362318840587" y="-22.098214285714285"/>
+        </scene>
+        <!--Ask Question View Controller-->
+        <scene sceneID="h5V-uL-EFV">
+            <objects>
+                <viewController id="qup-TW-QQO" customClass="AskQuestionViewController" customModule="QandA" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xog-0N-w6v">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="16P-8H-hdf">
+                                <rect key="frame" x="16" y="80" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IZT-oS-wy2">
+                                <rect key="frame" x="16" y="118" width="343" height="216"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="16P-8H-hdf" firstAttribute="trailing" secondItem="xog-0N-w6v" secondAttribute="trailingMargin" id="5h8-km-lmN"/>
+                            <constraint firstItem="16P-8H-hdf" firstAttribute="top" secondItem="h75-Ho-pub" secondAttribute="top" constant="16" id="Jna-1a-yPL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IZT-oS-wy2" secondAttribute="trailing" id="QrD-oO-7FV"/>
+                            <constraint firstItem="IZT-oS-wy2" firstAttribute="leading" secondItem="xog-0N-w6v" secondAttribute="leadingMargin" id="c7W-9R-J0r"/>
+                            <constraint firstItem="IZT-oS-wy2" firstAttribute="top" secondItem="16P-8H-hdf" secondAttribute="bottom" constant="8" id="nOc-th-M5s"/>
+                            <constraint firstItem="16P-8H-hdf" firstAttribute="leading" secondItem="xog-0N-w6v" secondAttribute="leadingMargin" id="yhy-mf-Y8E"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="h75-Ho-pub"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SNr-oP-aU9">
+                        <barButtonItem key="rightBarButtonItem" title="Submit Question" id="cSp-4w-hzg">
+                            <connections>
+                                <action selector="submitQuestionButtonPressed:" destination="qup-TW-QQO" id="G3Z-Xh-OG8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="nameTextField" destination="16P-8H-hdf" id="HBF-mg-fkh"/>
+                        <outlet property="questionTextView" destination="IZT-oS-wy2" id="3aM-9G-MCw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O8E-Bh-TAg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1400.8" y="-23.838080959520241"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zIX-Gv-ZWi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5i6-XL-Mhg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sFQ-KC-Ya5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ya8-SK-CFb" kind="relationship" relationship="rootViewController" id="31P-9j-gZE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Tm-bM-6n3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-217.39130434782609" y="-22.098214285714285"/>
         </scene>
     </scenes>
 </document>
